# wagtail-cmspage

./: .envrc  .gitignore  .guide.yaml  .pre-commit-config.yaml  CLAUDE.md  ChangeLog.md  LICENSE  README.md  pyproject.toml  ruff.toml
cmspage/: __init__.py  apps.py  blocks.py  choice_bg.py  choice_icon.py  context_processors.py  functional.py  middleware.py  mixins.py  mkicons.py  models.py  performance.py  themes.py  views.py  wagtail_hooks.py
cmspage/blocks/: __init__.py  background.py  cards.py  carousel.py  copy.py  cta.py  custom_table.py  form.py  hero.py  image_and_text.py  lines.py  links.py  new_section.py  radio.py  social.py  themes.py  title.py
cmspage/blocks/fields/: __init__.py  decimal_field.py  email_field.py  integer_field.py  select_field.py  text_field.py  textarea_field.py
cmspage/management/commands/: warm_menu_cache.py
cmspage/migrations/: 0001_initial.py  0002_add_cmsformpage.py  0002_alter_cmshomepage_options.py  0002_alter_menulink_link_document_and_more.py  0002_delete_sitevariables.py  0003_alter_body_in_cmspages.py  0003_menulink_expire_at_menulink_expired_and_more.py  0004_alter_cmsfooterpage_footer_alter_cmsformpage_body_and_more.py  0005_add_performance_indexes.py  0006_update_palette_values.py  0007_alter_cmsfooterpage_footer_alter_cmsformpage_body_and_more.py
cmspage/models/: __init__.py  cms_form.py  cms_page.py  functional.py  image.py  menu_link.py  mixins.py  site_variables.py  tags.py
cmspage/scripts/: mkicons.py
cmspage/scss/: cmspage.scss
cmspage/scss/partials/: _component-variants.scss  _theme-switcher.scss  _utilities.scss  _variables.scss
cmspage/static/: .gitignore
cmspage/static/css/: cmspage.css  cmspage.css.map
cmspage/static/js/: social-link-block.js
cmspage/templates/blocks/: call_to_action_block.html  cards_block.html  carousel_block.html  carousel_image_block.html  copyright_block.html  custom_table_block.html  form_block.html  hero_block.html  image_and_text_block.html  large_image_block.html  lineitem_block.html  lines_block.html  links_block.html  new_section.html  simple_richtext_block.html  small_image_and_text_block.html  socials_block.html  title_block.html  video_block.html
cmspage/templates/blocks/form_fields/: decimal_field_block.html  (+6 more)
cmspage/templates/cmspage/: base.html  cms_footer_page.html  cms_home_page.html  cms_page.html  cmspage.html
cmspage/templates/preview/: menu_link.html
cmspage/templatetags/: cmspage_tags.py  embedurl.py
cmspage/tests/: conftest.py  test_cmspage.py  test_context_processors.py
docs/: CMSPAGE.md  CONTENT_EDITOR_GUIDE.md
docs/dev/: PALETTE_MAPPING_LOG.md  TODO.md
scripts/: scss-compile.sh
tests/: conftest.py  test_blocks_form.py  test_cmspage.py  test_cmspage_image_prefetch.py  test_context_processors.py  test_mixins.py  test_models_image.py  test_models_menu_link.py  test_performance.py  test_templatetags.py  urls.py
(+16 files in other folders)
