[project]
name = "wagtail-cmspage"
version = "2025.4.2"
description = "Base extensible and comprehensive: CMSPage type for Wagtail"
authors = [
  { name = "David Nugent", email = "davidn@uniquode.io" }
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "django >= 5.1",
    "pillow-heif>=0.21",
    "wagtail>=6.3.1",
]
requires-python = ">= 3.10"

[project.optional-dependencies]
dev = [
    "ruff == 0.5.7",
]
test = [
    "pytest >= 8.2",
    "pytest-django >= 4.9",
    "pytest-mock >= 3.14",
    "pytest-cov >= 5.0.0",
]
vault = [
    "hvac >= 1.1.1",
]

[tool.pytest.ini_options]
testpaths = ["cmspage"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "testcontainers>=4.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cmspage"]
